# ilastik-oc-feats-cookiecutter

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/conda-recipe/: meta.yaml
{{cookiecutter.project_name}}/tests/: test_feature_format.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  {{cookiecutter.module_name}}.py  {{cookiecutter.module_name}}.yapsy-plugin
