[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.initial_version }}"
authors = [{name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}" }]
description = "{{ cookiecutter.description }}"
readme = "README.md"

# TODO: Add your dependencies here:
dependencies = ["ilastik", "typing_extensions"]
requires-python = ">=3.9"


[project.entry-points."ilastik.objectfeatures"]
{{ cookiecutter.project_name }} = "{{ cookiecutter.project_name }}"

[tool.setuptools.package-data]
{{ cookiecutter.project_name }} = ["*.yapsy-plugin"]
